<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="preference_screen">

    <PreferenceCategory app:allowDividerBelow="true">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@mipmap/ic_night_mode_png"
            android:key="night_mode"
            android:title="@string/settings_night_mode" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@mipmap/ic_notification_png"
            android:key="notifications"
            android:title="@string/settings_notifications" />
    </PreferenceCategory>

    <PreferenceCategory app:allowDividerBelow="true">
        <Preference
            android:icon="@mipmap/ic_feed_back_png"
            android:title="@string/settings_feed_back">
            <intent
                android:action="android.intent.action.SENDTO"
                android:data="mailto:info@globalpreecclampsia.org" />
        </Preference>
        <Preference
            android:icon="@mipmap/ic_info_png"
            android:title="@string/settings_about_us">
            <intent android:targetClass="org.infinite.mantra.AboutActivity" />
        </Preference>
        <Preference
            android:icon="@mipmap/ic_faqs_png"
            android:title="@string/settings_faqs">
            <intent
                android:action="android.intent.action.WEB_SEARCH"
                android:data="http://https://globalpreeclampsia.org/blog" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:icon="@mipmap/ic_exit_png"
            android:title="@string/settings_exit_app"
            android:key="exit"/>
    </PreferenceCategory>
</PreferenceScreen>