<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PregnancyMonitorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/pink_500"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <TextView
        android:id="@+id/calendar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:text="@string/select_last_normal_menstrual_period"
        android:textSize="18sp" />

    <CalendarView
        android:id="@+id/pregnancy_age_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calendar_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hapticFeedbackEnabled="true" />

    <LinearLayout
        android:id="@+id/lnmp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/pregnancy_age_calendar"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_normal_menestration_period"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calendar_lnmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/preg_age"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/lnmp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregnancy_age"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calendar_pregnancy_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/preg_age"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="202dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expected_date_of_delivery"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_of_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>