<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenstrualMonitorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/pink_500"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/bmi_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/calendar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/select_last_normal_menstrual_period"
                android:textSize="18sp" />

            <CalendarView
                android:id="@+id/menstrual_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calendar_title"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <!--                        <com.shuhart.materialcalendarview.MaterialCalendarView-->
            <!--                            android:id="@+id/menstrual_calendar"-->
            <!--                            android:layout_width="wrap_content"-->
            <!--                            android:layout_height="wrap_content"-->
            <!--                            android:layout_below="@id/calendar_title"-->
            <!--                            android:layout_alignParentStart="true"-->
            <!--                            android:layout_alignParentEnd="true" />-->

            <LinearLayout
                android:id="@+id/safe_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/menstrual_calendar"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="281dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/menstrual_duration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/duration_of_menstrual_cycle"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/calc_men_cycle_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/btn_submit"
                        android:textAllCaps="false" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/safe_period"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/safe_period1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/safe_period2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="2.5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/un_safe_period"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/un_safe_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/next_period_starts_on"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/next_period_starts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>